--- a/test/index.html
+++ b/test/index.html
@@ -10,6 +10,6 @@
 </ul>
 <p>4567890</p>
 <p><del>testing</del> 23</p>
-<p>Testing Tina account.</p>
+<p>Testing Tina account. 2</p>
 </body>
 </html>
