--- a/index.html
+++ b/index.html
@@ -12,6 +12,86 @@
 		<link rel="stylesheet" type="text/css" href="css/demo.css" />
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="js/modernizr.custom.js"></script>
+		<style>
+			.splitlayout.open-right {
+				background-repeat: no-repeat !important;
+				background-attachment: fixed !important;
+			}
+			.page.page-right {
+				background: transparent;
+			}
+			.page.page-right > * {
+				margin-right: 19%;
+			}
+			.credentials {
+				border-radius: 6px !important;
+				background: rgba(0,0,0,.2);
+				padding: 3px 12px 12px 12px;
+				display:block;
+				width: 22%;
+			}
+			li {
+				list-style: none;
+				margin: 9px 0 0px 0;
+			}
+			li.subtitle {
+				font-size: small;
+				font-weight: 300;
+				margin-top: 0px;
+			}
+			
+			div.intro > .side.side-right {
+				-webkit-box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.93);
+				-moz-box-shadow:    3px 0px 5px 0px rgba(0, 0, 0, 0.93);
+				box-shadow:         3px 0px 5px 0px rgba(0, 0, 0, 0.93);
+			}
+			
+			@media all and (max-height: 2112px) {
+				.splitlayout.open-right{
+					background: url(../img/tina2112.png) bottom right;
+				}
+			}
+			@media all and (max-height: 1080px) {
+				.splitlayout.open-right{
+					background: url(../img/tina1080.png) bottom right;
+				}
+			}
+			@media all and (max-height: 1024px) {
+				.splitlayout.open-right{
+					background: url(../img/tina1024.png) bottom right;
+				}
+			}
+			@media all and (max-height: 960px) {
+				.splitlayout.open-right{
+					background: url(../img/tina960.png) bottom right;
+				}
+			}
+			@media all and (max-height: 800px) {
+				.splitlayout.open-right{
+					background: url(../img/tina800.png) bottom right;
+				}
+			}
+			@media all and (max-height: 768px) {
+				.splitlayout.open-right{
+					background: url(../img/tina768.png) bottom right;
+				}
+			}
+			@media all and (max-height: 640px) {
+				.splitlayout.open-right{
+					background: url(../img/tina640.png) bottom right;
+				}
+			}
+			@media all and (max-height: 480px) {
+				.splitlayout.open-right{
+					background: url(../img/tina480.png) bottom right;
+				}
+			}
+			@media all and (max-height: 320px) {
+				.splitlayout.open-right{
+					background: url(../img/tina320.png) bottom right;
+				}
+			}
+		</style>
 	</head>
 	<body>
 		<div class="container">
@@ -39,7 +119,7 @@
 						<div class="intro-content">
 							This is where the MYA title page goes.
 							<div class="profile"><img src="img/profile2.jpg" alt="profile2"></div>
-							<h1><span>Amy White </span><span>Web Developer</span></h1>
+							<h1><span>Tina-Michelle </span><span>Trainer, Instructor, Entrepreneur</span></h1>
 						</div>
 						<div class="overlay"></div>
 					</div>
@@ -47,8 +127,67 @@
 				<div class="page page-right">
 					<div class="page-inner">
 						<section>
-							<h2>Move Your Axis</h2>
-							<p>This is where we'll talk about things like Soma Vida, the meetup, public and private classes, FB, Twitter, etc.</p>
+							<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley" target="_blank">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com" target="_blank">Move Your Axis&trade;</a>.</p>
+						</section>
+						<!--
+<p>
+								<div class="credentials">
+									<li>Personal Trainer Certification</li>
+									<li class="subtitle">American Council on Exercise &mdash; IDEA Insured</li>
+									<li>CPR/AED Certification</li>
+									<li class="subtitle">Infant, Child, and Adult</li>
+									<li>First Aid Certification</li>
+									<li class="subtitle">Including SIDS/SBS</li>
+									<li>B.S. Psychology</li>
+									<li class="subtitle">Concentration in Human Development</li>
+									<li>Gerontology Certificate</li>
+									<li>A.A. Business Technology</li>
+									<li>Paralegal Certificate</li>
+								</div>
+								<div style="flex: 1;">test</div> 
+							</p>
+						-->
+						<section>
+							<h2>Experience</h2>
+							<p>
+								Tina-Michelle has been active in dance since the age of 2. Initially, she studied ballet, tap, jazz, 
+								gymnastics, modern, and pointe. She later began exploring international rhythms, such as Latin, West 
+								African, Haitian Folkloric, Afro-Cuban, and Bellydance.
+							</p>
+							<p>
+								Fitness went hand in hand with dance. Participating in both team and individual sports, boot camps, 
+								and personal training, she has always enjoyed practicing her athleticism. Her avid interest in health and 
+								fitness is what led her to pursue her degrees and certifications.
+							</p>
+							<p>
+								She was embarking on her career as a professional dancer when a vehicle unexpectedly turned left in 
+								front of the car she was riding in. The injuries left her bedridden for three years. Refusing to accept that 
+								she would "never walk again" and could "kiss her dancing days goodbye", she walked her first mile on 
+								March 20, 2006 and began to write the rest of her life story.
+							</p>
+						</section>
+						<section>
+							<h2>Philosophy | Approach</h2>
+							<p>
+								Since “we all have our stories”, Tina-Michelle’s private training is tailored for the individual. She works 
+								with people to define their goals and provide focus. Because we are always developing, Tina-Michelle 
+								continually re-evaluates to provide a solid program that ensures achievement. 
+							</p>
+							<p>
+								Tina-Michelle believes that a healthy lifestyle is more easily adapted when the approach is both 
+								manageable and desirable. Drawing upon her diverse background and extensive experience with 
+								rehabilitation, Tina-Michelle also implements corrective exercise and cognition in her program design. A 
+								strong foundation is the key to enhancing performance. The confidence that ensues is a side benefit.
+							</p>
+						</section>
+						<section>
+							<h2>Ventures</h2>
+							<p>
+								Tina-Michelle was primarily a private trainer, but taught her dance-fitness classes publicly. When demand 
+								quickly grew, however, Move Your Axis&trade; evolved from dance-fitness into a well-rounded lifestyle 
+								program to provide greater availability to enthusiasts. The array of options allows for a more individual 
+								approach to a healthy lifestyle. Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
+							</p>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-right -->
