Fixed path for img

--- a/index.html
+++ b/index.html
@@ -48,47 +48,47 @@
 			
 			@media all and (max-height: 2112px) {
 				.splitlayout.open-right{
-					background: url(../img/tina2112.png) bottom right;
+					background: url(./img/tina2112.png) bottom right;
 				}
 			}
 			@media all and (max-height: 1080px) {
 				.splitlayout.open-right{
-					background: url(../img/tina1080.png) bottom right;
+					background: url(./img/tina1080.png) bottom right;
 				}
 			}
 			@media all and (max-height: 1024px) {
 				.splitlayout.open-right{
-					background: url(../img/tina1024.png) bottom right;
+					background: url(./img/tina1024.png) bottom right;
 				}
 			}
 			@media all and (max-height: 960px) {
 				.splitlayout.open-right{
-					background: url(../img/tina960.png) bottom right;
+					background: url(./img/tina960.png) bottom right;
 				}
 			}
 			@media all and (max-height: 800px) {
 				.splitlayout.open-right{
-					background: url(../img/tina800.png) bottom right;
+					background: url(./img/tina800.png) bottom right;
 				}
 			}
 			@media all and (max-height: 768px) {
 				.splitlayout.open-right{
-					background: url(../img/tina768.png) bottom right;
+					background: url(./img/tina768.png) bottom right;
 				}
 			}
 			@media all and (max-height: 640px) {
 				.splitlayout.open-right{
-					background: url(../img/tina640.png) bottom right;
+					background: url(./img/tina640.png) bottom right;
 				}
 			}
 			@media all and (max-height: 480px) {
 				.splitlayout.open-right{
-					background: url(../img/tina480.png) bottom right;
+					background: url(./img/tina480.png) bottom right;
 				}
 			}
 			@media all and (max-height: 320px) {
 				.splitlayout.open-right{
-					background: url(../img/tina320.png) bottom right;
+					background: url(./img/tina320.png) bottom right;
 				}
 			}
 		</style>
