--- a/index.html
+++ b/index.html
@@ -1,233 +1,11 @@
-<!DOCTYPE html>
-<html lang="en" class="no-js">
-	<head>
-		<meta charset="UTF-8" />
-		<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"> 
-		<meta name="viewport" content="width=device-width, initial-scale=1.0"> 
-		<title>Tina-Michelle | Move Your Axis</title>
-		<meta name="description" content="Tina-Michelle is a personal trainer and dance instructor in Austin, TX. She is also the founder of Move Your Axis." />
-		<meta name="keywords" content="tina-michlle, move your axis, mya, dance, fitness, zumba, personal trainer, austin, tx, boston" />
-		<meta name="author" content="Corey Butler" />
-		<link rel="shortcut icon" href="../favicon.ico">
-		<link rel="stylesheet" type="text/css" href="css/demo.css" />
-		<link rel="stylesheet" type="text/css" href="css/component.css" />
-		<script src="js/modernizr.custom.js"></script>
-		<style>
-			.splitlayout.open-right {
-				background-repeat: no-repeat !important;
-				background-attachment: fixed !important;
-			}
-			.page.page-right {
-				background: transparent;
-			}
-			.page.page-right > * {
-				margin-right: 19%;
-			}
-			.credentials {
-				border-radius: 6px !important;
-				background: rgba(0,0,0,.2);
-				padding: 3px 12px 12px 12px;
-				display:block;
-				width: 22%;
-			}
-			li {
-				list-style: none;
-				margin: 9px 0 0px 0;
-			}
-			li.subtitle {
-				font-size: small;
-				font-weight: 300;
-				margin-top: 0px;
-			}
-			
-			div.intro > .side.side-right {
-				-webkit-box-shadow: 3px 0px 5px 0px rgba(0, 0, 0, 0.93);
-				-moz-box-shadow:    3px 0px 5px 0px rgba(0, 0, 0, 0.93);
-				box-shadow:         3px 0px 5px 0px rgba(0, 0, 0, 0.93);
-			}
-			
-			@media all and (max-height: 2112px) {
-				.splitlayout.open-right{
-					background: url(./img/tina2112.png) bottom right;
-				}
-			}
-			@media all and (max-height: 1080px) {
-				.splitlayout.open-right{
-					background: url(./img/tina1080.png) bottom right;
-				}
-			}
-			@media all and (max-height: 1024px) {
-				.splitlayout.open-right{
-					background: url(./img/tina1024.png) bottom right;
-				}
-			}
-			@media all and (max-height: 960px) {
-				.splitlayout.open-right{
-					background: url(./img/tina960.png) bottom right;
-				}
-			}
-			@media all and (max-height: 800px) {
-				.splitlayout.open-right{
-					background: url(./img/tina800.png) bottom right;
-				}
-			}
-			@media all and (max-height: 768px) {
-				.splitlayout.open-right{
-					background: url(./img/tina768.png) bottom right;
-				}
-			}
-			@media all and (max-height: 640px) {
-				.splitlayout.open-right{
-					background: url(./img/tina640.png) bottom right;
-				}
-			}
-			@media all and (max-height: 480px) {
-				.splitlayout.open-right{
-					background: url(./img/tina480.png) bottom right;
-				}
-			}
-			@media all and (max-height: 320px) {
-				.splitlayout.open-right{
-					background: url(./img/tina320.png) bottom right;
-				}
-			}
-		</style>
-	</head>
-	<body>
-		<div class="container">
-			<div id="splitlayout" class="splitlayout">
-				<div class="intro">
-					<div class="side side-left">
-						<header class="codropsheader clearfix">
-							<span>Blueprint <span class="bp-icon bp-icon-about" data-content="The Blueprints are a collection of basic and minimal website concepts, components, plugins and layouts with minimal style for easy adaption and usage, or simply for inspiration."></span></span>
-							<h1>Split Layout</h1>
-							<nav>
-								<a href="http://tympanus.net/Blueprints/OnScrollEffectLayout/" class="bp-icon bp-icon-prev" data-info="previous Blueprint"><span>Previous Blueprint</span></a>
-								<!--a href="" class="bp-icon bp-icon-next" data-info="next Blueprint"><span>Next Blueprint</span></a-->
-								<a href="http://tympanus.net/codrops/?p=16693" class="bp-icon bp-icon-drop" data-info="back to the Codrops article"><span>back to the Codrops article</span></a>
-								<a href="http://tympanus.net/codrops/category/blueprints/" class="bp-icon bp-icon-archive" data-info="Blueprints archive"><span>Go to the archive</span></a>
-							</nav>
-						</header>
-						<div class="intro-content">
-							This is where your "overview" T-M text goes. Links.
-							<div class="profile"><img src="img/profile1.jpg" alt="profile1"></div>
-							<h1><span>Toby Blue </span><span>Web Designer</span></h1>
-						</div>
-						<div class="overlay"></div>
-					</div>
-					<div class="side side-right">
-						<div class="intro-content">
-							This is where the MYA title page goes.
-							<div class="profile"><img src="img/profile2.jpg" alt="profile2"></div>
-							<h1><span>Tina-Michelle </span><span>Trainer, Instructor, Entrepreneur</span></h1>
-						</div>
-						<div class="overlay"></div>
-					</div>
-				</div><!-- /intro -->
-				<div class="page page-right">
-					<div class="page-inner">
-						<section>
-							<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley" target="_blank">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com" target="_blank">Move Your Axis&trade;</a>.</p>
-						</section>
-						<!--
-<p>
-								<div class="credentials">
-									<li>Personal Trainer Certification</li>
-									<li class="subtitle">American Council on Exercise &mdash; IDEA Insured</li>
-									<li>CPR/AED Certification</li>
-									<li class="subtitle">Infant, Child, and Adult</li>
-									<li>First Aid Certification</li>
-									<li class="subtitle">Including SIDS/SBS</li>
-									<li>B.S. Psychology</li>
-									<li class="subtitle">Concentration in Human Development</li>
-									<li>Gerontology Certificate</li>
-									<li>A.A. Business Technology</li>
-									<li>Paralegal Certificate</li>
-								</div>
-								<div style="flex: 1;">test</div> 
-							</p>
-						-->
-						<section>
-							<h2>Experience</h2>
-							<p>
-								Tina-Michelle has been active in dance since the age of 2. Initially, she studied ballet, tap, jazz, 
-								gymnastics, modern, and pointe. She later began exploring international rhythms, such as Latin, West 
-								African, Haitian Folkloric, Afro-Cuban, and Bellydance.
-							</p>
-							<p>
-								Fitness went hand in hand with dance. Participating in both team and individual sports, boot camps, 
-								and personal training, she has always enjoyed practicing her athleticism. Her avid interest in health and 
-								fitness is what led her to pursue her degrees and certifications.
-							</p>
-							<p>
-								She was embarking on her career as a professional dancer when a vehicle unexpectedly turned left in 
-								front of the car she was riding in. The injuries left her bedridden for three years. Refusing to accept that 
-								she would "never walk again" and could "kiss her dancing days goodbye", she walked her first mile on 
-								March 20, 2006 and began to write the rest of her life story.
-							</p>
-						</section>
-						<section>
-							<h2>Philosophy | Approach</h2>
-							<p>
-								Since “we all have our stories”, Tina-Michelle’s private training is tailored for the individual. She works 
-								with people to define their goals and provide focus. Because we are always developing, Tina-Michelle 
-								continually re-evaluates to provide a solid program that ensures achievement. 
-							</p>
-							<p>
-								Tina-Michelle believes that a healthy lifestyle is more easily adapted when the approach is both 
-								manageable and desirable. Drawing upon her diverse background and extensive experience with 
-								rehabilitation, Tina-Michelle also implements corrective exercise and cognition in her program design. A 
-								strong foundation is the key to enhancing performance. The confidence that ensues is a side benefit.
-							</p>
-						</section>
-						<section>
-							<h2>Ventures</h2>
-							<p>
-								Tina-Michelle was primarily a private trainer, but taught her dance-fitness classes publicly. When demand 
-								quickly grew, however, Move Your Axis&trade; evolved from dance-fitness into a well-rounded lifestyle 
-								program to provide greater availability to enthusiasts. The array of options allows for a more individual 
-								approach to a healthy lifestyle. Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
-							</p>
-						</section>
-					</div><!-- /page-inner -->
-				</div><!-- /page-right -->
-				<div class="page page-left">
-					<div class="page-inner">
-						<section>
-							<h2>About Tina-Michelle</h2>
-							<p>Credentials</p>
-							<p>Dance Experience</p>
-						</section>
-						<section>
-							<h2>Web Design</h2>
-							<p>Scenario archetype complementary responsive script pixel sidebar sitemap keep it simple. Complementary visuals footer CSS from alan cooper delightful.  Photoshop iconography simplicity user experience affordance narrative ascenders contour.  Slab serif interstitial skeuomorphism illustrator design by committee simplicity alan cooper eye tracking.  Typography contrast mental model typesetting affordance narrative from CSS. Retina simplicity design by committee typography oblique.</p>
-							<p>Delightful ascenders contrast prototype. Ligature jakob nielsen user measure.  Ligature contrast glyph rule of thirds composition interstitial dribbble.  Mental model typography urbanized balance.  Resolution rounded corners IDEO constraints dribbble persona.  Portfolio sketch baseline 66-character line.  Usability testing mental model simplicity aspect ratio pencil type.  Usable sans-serif visualization leading prägnanz baseline pencil fireworks clarity omnigraffle.</p>
-						</section>
-						<section>
-							<h2>Responsive</h2>
-							<p>Card-sorting dropdown constraints alan cooper prägnanz iconography. Stakeholder balsamiq italic vector composition ethnography CSS monospace hierarchy. Eye tracking serif persona focus group.</p>
-							<p>Typesetting artifact rounded corners eye tracking braindump drawer menu mockup dropdown measure. Jony ive eye tracking script monospace heuristic tabs sketches. Affordance eye tracking scenario usable ligature typesetting clarity responsive. Information architecture golden ratio drawer menu header affordance aspect ratio. Balsamiq slab serif IDEO cognitive dissonance kerning pixel pixel-perfect. Pixel rounded corners header workflow portfolio.</p>
-							<p>Scenario navigation complementary jony ive helvetica archetype interstitial serif front-end. Constraints pencil usability gestalt design language mockup usability testing affordance jakob nielsen.</p>
-						</section>
-						<section>
-							<h2>Prototype</h2>
-							<p>Delightful ascenders contrast prototype. Ligature jakob nielsen user measure.  Ligature contrast glyph rule of thirds composition interstitial dribbble.  Mental model typography urbanized balance.  Resolution rounded corners IDEO constraints dribbble persona.  Portfolio sketch baseline 66-character line.  Usability testing mental model simplicity aspect ratio pencil type.  Usable sans-serif visualization leading prägnanz baseline pencil fireworks clarity omnigraffle.</p>
-							<p>Paper prototype urbanized headroom typography splash screen pencil modal branding. Retina omnigraffle objectified descender navigation adobe ethnography. Innovate design by committee modern hero message. Contrast user-centered color theory keep it simple visuals bevel adobe descender splash screen. From focus group accessibility sans-serif archetype pixel-perfect complementary skeuomorphism. Focus group iconography figure-ground navigation user-centered omnigraffle from.</p>
-						</section>
-						<section>
-							<h2>Typography</h2>
-							<p>Typesetting artifact rounded corners eye tracking braindump drawer menu mockup dropdown measure. Jony ive eye tracking script monospace heuristic tabs sketches. Affordance eye tracking scenario usable ligature typesetting clarity responsive. Information architecture golden ratio drawer menu header affordance aspect ratio. Balsamiq slab serif IDEO cognitive dissonance kerning pixel pixel-perfect. Pixel rounded corners header workflow portfolio.</p>
-							<p>Fireworks mobile skeuomorphism sitemap. Workflow iconography interaction design pixel-perfect serif. Mental model monospace typeface behavior change bauhaus from usability testing. Color theory user experience paper prototype narrative palette serif gradient header. Oblique modal 66-character line sketch responsive portfolio. Comic sans fireworks prägnanz monospace gradient design language jakob nielsen. Figure-ground pixel aspect ratio sketches rounded corners jony ive constraints mental model splash screen.</p>
-							<p>Placeholder text by <a href="http://www.designeripsum.com/">Designer Ipsum</a>.</p>
-							<p>Profile images are licensed under a <a href="http://creativecommons.org/licenses/by-nc-sa/2.0/deed.en">Creative Commons BY-NC-SA 2.0</a> license. The images are from Greg Peverill-Conti's <a href="http://www.flickr.com/photos/gregpc/">1,000 faces project</a>.</p>
-						</section>
-					</div><!-- /page-inner -->
-				</div><!-- /page-left -->
-				<a href="#" class="back back-right" title="back to intro">&rarr;</a>
-				<a href="#" class="back back-left" title="back to intro">&larr;</a>
-			</div><!-- /splitlayout -->
-		</div><!-- /container -->
-		<script src="js/classie.js"></script>
-		<script src="js/cbpSplitLayout.js"></script>
-	</body>
+<html>
+  <head>
+    <title>Tina-Michelle</title>
+    <META http-equiv="refresh" content="5;URL=http://www.tina-michelle.com/about">
+		<script>
+			setTimeout(function(){
+				window.location = "./about";
+			},500);
+		</script>
+  </head>
 </html>
