Published by Corey B.

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>about</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com">Move Your Axis™</a>.</p>
+<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com">Move Your Axis</a>™.</p>
 <ul>
 <li>Personal Trainer Certification (American Council on Exercise)</li>
 <li>CPR/AED Certification (Infant, Child, and Adult)</li>
