Published by Corey B.

--- a/about/index.html
+++ b/about/index.html
@@ -1,7 +1,7 @@
 <html>
 <head><title>about</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
-<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com">Move Your Axis</a>™.</p>
+<p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com">Move Your Axis</a>.</p>
 <ul>
 <li>Personal Trainer Certification (American Council on Exercise)</li>
 <li>CPR/AED Certification (Infant, Child, and Adult)</li>
@@ -19,6 +19,6 @@
 <p>Since “we all have our stories”, Tina-Michelle’s private training is tailored for the individual. She works with people to define their goals and provide focus. Because we are always developing, Tina-Michelle continually re-evaluates to provide a solid program that ensures achievement. </p>
 <p>Tina-Michelle believes that a healthy lifestyle is more easily adapted when the approach is both manageable and desirable. Drawing upon her diverse background and extensive experience with rehabilitation, Tina-Michelle also implements corrective exercise and cognition in her program design. A strong foundation is the key to enhancing performance. The confidence that ensues is a side benefit.</p>
 <h2 id="ventures">Ventures</h2>
-<p>Tina-Michelle was primarily a private trainer, but taught her dance-fitness classes publicly. When demand quickly grew, however, Move Your Axis™ evolved from dance-fitness into a well-rounded lifestyle program to provide greater availability to enthusiasts. The array of options allows for a more individual approach to a healthy lifestyle. Move Your Axis™ is available <a href="http://live.moveyouraxis.com">live</a> and (soon to be) <a href="http://live.moveyouraxis.com">virtually</a>.</p>
+<p>Tina-Michelle was primarily a private trainer, but taught her dance-fitness classes publicly. When demand quickly grew, however, Move Your Axis evolved from dance-fitness into a well-rounded lifestyle program to provide greater availability to enthusiasts. The array of options allows for a more individual approach to a healthy lifestyle. Move Your Axis is available <a href="http://live.moveyouraxis.com">live</a> and (soon to be) <a href="http://live.moveyouraxis.com">virtually</a>.</p>
 </body>
 </html>
