--- a/about/index.html
+++ b/about/index.html
@@ -11,7 +11,7 @@
 <li>A.A. Business Technology</li>
 <li>Paralegal Certificate</li>
 </ul>
-<h2 id="experience">Experience</h2>
+<h2 id="experiences">Experiences</h2>
 <p>Tina-Michelle has been active in dance since the age of 2. Initially, she studied ballet, tap, jazz, gymnastics, modern, and pointe. She later began exploring international rhythms, such as Latin, West African, Haitian Folkloric, Afro-Cuban, and Bellydance.</p>
 <p>Fitness went hand in hand with dance. Participating in both team and individual sports, boot camps, and personal training, she has always enjoyed practicing her athleticism. Her avid interest in health and fitness is what led her to pursue her degrees and certifications.</p>
 <p>She was embarking on her career as a professional dancer when a vehicle unexpectedly turned left in front of the car she was riding in. The injuries left her bedridden for three years. Refusing to accept that she would “never walk again” and could “kiss her dancing days goodbye”, she walked her first mile on March 20, 2006 and began to write the rest of her life story.</p>
