Updates per Tina's requests

--- a/index.html
+++ b/index.html
@@ -13,13 +13,16 @@
 		<link rel="stylesheet" type="text/css" href="css/component.css" />
 		<script src="js/modernizr.custom.js"></script>
 		<style>
+			BODY{
+				text-transform: uppercase;
+			}
 			.splitlayout.open-right,
 			.page.page-right {
 				background: transparent !important;
 			}
 			.page.page-left {
 				background: #efefef;
-				color: #333;
+				color: #2e1919;
 			}
 			.credentials {
 				border-radius: 6px !important;
@@ -28,6 +31,7 @@
 				margin: 6px 0 10px 70px;
 				float: right;
 				width: 22%;
+				text-align: left;
 			}
 			li {
 				list-style: none;
@@ -50,6 +54,7 @@
 			.side-left {
 				background: #353535;
 				outline: 1px solid #353535;
+				color: #eae6e3;
 			}
 			
 			.side-right > .intro-content > h1 > span:nth-child(2):before {
@@ -153,12 +158,12 @@
 				<div class="page page-right">
 					<div class="page-inner">
 						<section>
-							<p class="highlightbar">Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley" target="_blank">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com" target="_blank">Move Your Axis&trade;</a>.</p>
+							<p class="highlightbar">Tina-Michelle is a <a href="http://www.acefitness.org/acefit/trainer_profile.aspx?acecp=dyy7328" target="_blank">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com" target="_blank">Move Your Axis&trade;</a>.</p>
 						</section>
 						<section>
 							<div class="credentials">
 								<li>Personal Trainer Certification</li>
-								<li class="subtitle">American Council on Exercise &mdash; IDEA Insured</li>
+								<li class="subtitle">American Council on Exercise</li>
 								<li>CPR/AED Certification</li>
 								<li class="subtitle">Infant, Child, &amp; Adult</li>
 								<li>First Aid Certification</li>
