--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 					</div>
 					<div class="side side-right">
 						<div class="intro-content">
-							<div class="profile"><img src="img/profile.png" alt="profile2"></div>
+							<div class="profile"><!--<img src="img/profile.png" alt="profile2">--></div>
 							<h1><span>Tina-Michelle </span><span>more &raquo;</span></h1>
 						</div>
 						<div class="overlay"></div>
@@ -240,6 +240,17 @@
 
 							<h3>Relax Your Axis&trade;</h3>
 							<p>The flexibility experience.  Keep The Bod moving through its full range of motion with methods that aid in restoration and recovery.  Stretch muscles and target trigger points.  Come back to your senses.  Renew and rejuvenate.</p>
+						</section>
+						<section>
+							<h2>Who enjoys the Move Your Axis&trade; Lifestyle Program?</h2>
+							<p>Athletic ninjas, intellectual explorers, and growth seekers – to name a few. Essentially: Anyone who is 
+unsatisfied with stagnation.</p>
+							<p> Move Your Axis enthusiasts have a thirst for new challenges and mastering missions. For them, it’s 
+							about the journey. They are the ones who want to step out of their comfort zone and into their life.</p>
+							<h3>Availability:</h3>
+							<p>The unique Move Your Axis™ Lifestyle Program is exclusively taught by Tina-Michelle and is delivered live and (soon to be) virtually.</p>
+							<h3>Contact</h3>
+							<p>info@moveyouraxis.com</p>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-left -->
