--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
 							</div>
 							<h2>Experience</h2>
 							<p>
-								Tina-Michelle has been active in dance since the age of 2. Initially, she studied ballet, tap, jazz, 
-								gymnastics, modern, and pointe. She later began exploring international rhythms, such as Latin, West 
+								Tina-Michelle has been active in dance since the age of two. Initially, she studied Ballet, Tap, Jazz, 
+								Gymnastics, Modern, and Pointe. She later began exploring international rhythms, such as Latin, West 
 								African, Haitian Folkloric, Afro-Cuban, and Bellydance.
 							</p>
 							<p>
@@ -188,33 +188,62 @@
 							</p>
 							<p>
 								She was embarking on her career as a professional dancer when a vehicle unexpectedly turned left in 
-								front of the car she was riding in. The injuries left her bedridden for three years. Refusing to accept that 
-								she would "never walk again" and could "kiss her dancing days goodbye", she walked her first mile on 
-								March 20, 2006 and began to write the rest of her life story.
+								front of the car she was riding in. Although the injuries left her bedridden for three years, 
+								she refused to accept that she would "never walk again" and could "kiss her 
+								dancing days goodbye". On March 20, 2006, she walked her first mile and began 
+								to write the <a href="https://medium.com/inspire-the-world/e95487e53e27" target="_blank">rest of her life story</a>.
 							</p>
 						</section>
 						<section>
 							<h2>Philosophy | Approach</h2>
 							<p>
-								Since “we all have our stories”, Tina-Michelle’s private training is tailored for the individual. She works 
-								with people to define their goals and provide focus. Because we are always developing, Tina-Michelle 
-								continually re-evaluates to provide a solid program that ensures achievement. 
+								Since we <i>all</i> have our stories, Tina-Michelle’s private training is tailored for the
+								individual. She believes that a healthy lifestyle succeeds when the approach is 
+								both manageable and desirable. Therefore, she works on a case-by-case basis 
+								to help define goals and provide focus. Because we are always developing, Tina-
+								Michelle continually re-evaluates with her clients to provide a solid program that 
+								ensures achievement and continued growth.
 							</p>
 							<p>
 								Tina-Michelle believes that a healthy lifestyle is more easily adapted when the approach is both 
 								manageable and desirable. Drawing upon her diverse background and extensive experience with 
-								rehabilitation, Tina-Michelle also implements corrective exercise and cognition in her program design. A 
+								rehabilitation, Tina-Michelle also implements corrective exercise and cognitive fitness in her program design. A 
 								strong foundation is the key to enhancing performance. The confidence that ensues is a side benefit.
 							</p>
+						</section>
+						<section>
+							<h2>Who Trains With Tina-Michelle?</h2>
+							<p>
+								Tina-Michelle’s private sessions include individual, group, and special programs
+								(including school, corporate, and independent &amp; assisted living). Her clients come 
+								from all walks of life, but what sets them apart is their determination. They are 
+								also quality-seekers who value their time. Tina-Michelle’s clients enjoy being 
+								challenged on a multitude of levels because they have a strong desire to see what 
+								they are capable of. In a nutshell, they are the ones who are writing the rest of 
+								<i>their</i> life story.
+							</p>
+						</section>
+						<section>
+							<h2>Rates</h2>
+							<p>Rates vary depending on number of participants, mileage (15+ miles one way) and frequency:</p>
+							<li>Individual: $100/hour</li>
+							<li>Group: $65/hour (per person)</li>
+							<p>Special Programs: Please contact directly with the details of your request.</p>
+							<p>Contact: tina@tina-michelle.com</p>
 						</section>
 						<section>
 							<h2>Ventures</h2>
 							<p>
 								Tina-Michelle was primarily a private trainer, but taught her dance-fitness classes publicly. When demand 
-								quickly grew, however, Move Your Axis&trade; evolved from dance-fitness into a well-rounded lifestyle 
-								program to provide greater availability to enthusiasts. The array of options allows for a more individual 
-								approach to a healthy lifestyle. Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
+								quickly grew, however, Move Your Axis&trade; evolved from dance-fitness into the well-rounded lifestyle 
+								program it is today. Now there is greater availability to enthusiasts and the array of options allow for a more 
+								individual approach to a healthy lifestyle.
+								Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
 							</p>
+						</section>
+						<section>
+							<h2>Writings</h2>
+							<p>Tina-Michelle's articles can be found on <a href="https://medium.com/@RhythmNMovement" target="_blank">https://medium.com/@RhythmNMovement</a></p>
 						</section>
 					</div><!-- /page-inner -->
 				</div><!-- /page-right -->
