--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 					</div>
 					<div class="side side-right">
 						<div class="intro-content">
-							<div class="profile"><!--<img src="img/profile.png" alt="profile2">--></div>
+							<div class="profilex"><!--<img src="img/profile.png" alt="profile2">--></div>
 							<h1><span>Tina-Michelle </span><span>more &raquo;</span></h1>
 						</div>
 						<div class="overlay"></div>
