Published by Corey B.

--- a/about/index.html
+++ b/about/index.html
@@ -2,6 +2,7 @@
 <head><title>about</title><link rel="stylesheet" type="text/css" href="https://raw.github.com/coreybutler/site-tm/master/static.css"/></head>
 <body>
 <h1 id="test">Test</h1>
+<p>Again</p>
 <p>Tina-Michelle is a <a href="http://www.ideafit.com/profile/tina-michelle-pittsley">Certified Personal Trainer</a>, Dance Instructor, and Creator of <a href="http://moveyouraxis.com">Move Your Axis</a>.</p>
 <ul>
 <li>Personal Trainer Certification (American Council on Exercise)</li>
