--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@
 						</section>
 						<section>
 							<h2>Rates</h2>
-							<p>Rates vary depending on number of participants, mileage (15+ miles one way) and frequency:</p>
+							<p>Rates vary depending on number of participants, mileage (15+ miles one way), and frequency:</p>
 							<li>Individual: $110/hour</li>
 							<li>Group: $65/hour (per person)</li>
 							<li>Special Programs: Please contact directly with the details of your request</li>
