--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
 								<div class="hint--bounce hint--rounded hint--bottom" data-hint="moveyouraxis.com"><a href="http://moveyouraxis.com" target="_blank" class="icon-globe"></a></div>
 								<div class="hint--bounce hint--rounded hint--bottom" data-hint="Follow on Facebook."><a href="http://facebook.com/moveyouraxis" target="_blank" class="icon-facebook"></a></div>
 								<div class="hint--bounce hint--rounded hint--bottom" data-hint="Follow on Twitter."><a href="http://twitter.com/moveyouraxis" target="_blank" class="icon-twitter"></a></div>
-								<!--<div class="hint--bounce hint--rounded hint--bottom" data-hint="Like MYA? Say so on Yelp!"><a href="http://www.yelp.com" target="_blank" class="icon-yelp"></a></div>-->
+								<div class="hint--bounce hint--rounded hint--bottom" data-hint="Like MYA? Say so on Yelp!"><a href="http://www.yelp.com/biz/move-your-axis-austin" target="_blank" class="icon-yelp"></a></div>
 								<div class="hint--bounce hint--rounded hint--bottom" data-hint="Join the meetup group!"><a href="http://www.meetup.com/move-your-axis" target="_blank" class="icon-meetup"></a></div>
 							</nav>
 						</header>
