Text updates per TM

--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
 						<section>
 							<div class="credentials">
 								<!--<img src="img/profile.png"/>-->
-								<li>Personal Trainer Certification</li>
+								<li>Certified Personal Trainer (CPT)</li>
 								<li class="subtitle">American Council on Exercise</li>
 								<li>CPR/AED Certification</li>
 								<li class="subtitle">Infant, Child, &amp; Adult</li>
@@ -244,30 +244,37 @@
 						<section>
 							<h2>Philosophy | Approach</h2>
 							<p>
-								Since we <i>all</i> have our stories, Tina-Michelle’s private training is tailored for the
-								individual. She believes that a healthy lifestyle succeeds when the approach is 
-								both manageable and desirable. Therefore, she works on a case-by-case basis 
-								to help define goals and provide focus. Because we are always developing, Tina-
-								Michelle continually re-evaluates with her clients to provide a solid program that 
-								ensures achievement and continued growth.
+								Personal growth and development occur throughout the entire lifespan; how much of that is explored is uniquely determined.
 							</p>
 							<p>
-								Tina-Michelle believes that a healthy lifestyle is more easily adapted when the approach is both 
-								manageable and desirable. Drawing upon her diverse background and extensive experience with 
-								rehabilitation, Tina-Michelle also implements corrective exercise and cognitive fitness in her program design. A 
-								strong foundation is the key to enhancing performance. The confidence that ensues is a side benefit.
+								To facilitate continued progression and achievement, Tina-Michelle collaborates with each individual in an effort to define and redefine goals. Customized programs are meticulously 
+								designed – specific to personal needs. They may include corrective exercise, cognitive fitness, and other relevant tools required for success.
+							</p>
+							<p>
+								A strong foundation is the key to enhancement.  Beyond that, the possibilities are endless.
+							</p>
+						</section>
+						<section>
+							<h2>Differentiating Factors</h2>
+							<p>
+								Some of her formal studies ranged from nutrition to the human brain.  Her knowledge helps provide comprehensive understanding in areas that perplex many. 
+							</p>
+							<p>
+								Tina-Michelle’s diverse personal, educational, and professional experiences are insightful when creating plans for a variety of lifestyles. 
+							</p>
+							<p>
+								Her own extensive rehabilitation experiences allow for compassion and tremendous respect for steel resolve.
 							</p>
 						</section>
 						<section>
 							<h2>Who Trains With Tina-Michelle?</h2>
 							<p>
-								Tina-Michelle’s private sessions include individual, group, and special programs.
-								Her clients come 
-								from all walks of life, but what sets them apart is their determination. They are 
-								also quality-seekers who value their time. Tina-Michelle’s clients enjoy being 
-								challenged on a multitude of levels because they have a strong desire to see what 
-								they are capable of. In a nutshell, they are the ones who are writing the rest of 
-								<i>their</i> life story.
+								Tina-Michelle works with anyone who has a desire.  The specialized areas she is sought after are for chronic pain management, post-orthopedic rehabilitation, special conditions, sports 
+								conditioning, and dance instruction.
+							</p>
+							<p>
+								Injured athletes, older adults who wish to maintain their independence, entrepreneurs seeking balance, aspiring performers, anyone determined to reach a health goal... Their 
+								commonality is their determination. They are quality-seekers who value their time and want to maximize their potential.  They are the ones writing the rest of <i>their</i> life story.
 							</p>
 						</section>
 						<section>
@@ -276,7 +283,7 @@
 							<li>Individual: $125/hour</li>
 							<li>Group: $70/hour (per person)</li>
 							<li>Special Programs: Please contact directly with the details of your request.</li>
-							<p></p>
+							<p><i>Rates decrease with frequency.</i></p>
 						</section>
 						<section>
 							<h2>Contact</h2>
@@ -285,11 +292,11 @@
 						<section>
 							<h2>Ventures</h2>
 							<p>
-								Tina-Michelle was primarily a private trainer, but taught her dance-fitness 
-								classes publicly. When demand quickly grew, however, Move Your Axis&trade;
-								evolved from dance-fitness into the well-rounded lifestyle program it is today. 
-								Now there is greater availability to enthusiasts and the array of options allow 
-								for a more individualized approach to a healthy lifestyle.
+								Initially, Tina-Michelle was a private trainer, but primarily taught her dance-fitness classes publicly.  Demand quickly grew, however, and there became a great deal of crossover 
+								between her public and private sessions.  To accommodate enthusiasts, she evolved Move Your Axis™ into the well-rounded program it is today, offering an array of choices for healthy 
+								lifestyles. 
+							</p>
+							<p>
 								Move Your Axis&trade; is available <a href="http://live.moveyouraxis.com" target="_blank">live</a> and (soon to be) <a href="http://moveyouraxis.com" target="_blank">virtually</a>.
 							</p>
 						</section>
